--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.9",
     "@astrojs/db": "^0.8.7",
+    "@astrojs/mdx": "^2.2.0",
     "@astrojs/netlify": "^5.1.3",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
