--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "agave-astro",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.5.9",
-    "@astrojs/db": "^0.8.7",
-    "@astrojs/mdx": "^2.2.0",
-    "@astrojs/netlify": "^5.1.3",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.1",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.5.6",
-    "dayjs": "^1.11.10",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
-  }
+    "name": "agave-astro",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/check": "^0.5.9",
+        "@astrojs/db": "^0.8.7",
+        "@astrojs/mdx": "^2.2.0",
+        "@astrojs/netlify": "^5.1.3",
+        "@astrojs/rss": "^4.0.5",
+        "@astrojs/sitemap": "^3.1.1",
+        "@astrojs/svelte": "^5.4.0",
+        "@astrojs/tailwind": "^5.1.0",
+        "astro": "^4.5.6",
+        "dayjs": "^1.11.10",
+        "svelte": "^4.2.16",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.4.5"
+    },
+    "devDependencies": {
+        "@shikijs/transformers": "^1.2.1",
+        "@tailwindcss/typography": "^0.5.10"
+    }
 }
