--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@astrojs/svelte": "^5.4.0",
         "@astrojs/tailwind": "^5.1.0",
         "astro": "^4.5.6",
+        "astro-expressive-code": "^0.35.3",
         "dayjs": "^1.11.10",
         "svelte": "^4.2.16",
         "tailwindcss": "^3.4.1",
