--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       ]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "preact",
+    "exclude": ["node_modules"]
   }
 }
