--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
         "@astrojs/sitemap": "^3.1.4",
         "@astrojs/svelte": "^5.4.0",
         "@astrojs/tailwind": "^5.1.0",
+        "@types/canvas-confetti": "^1.6.4",
         "astro": "^4.8.2",
         "astro-expressive-code": "^0.35.3",
+        "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.11",
+        "sharp": "^0.33.3",
         "svelte": "^4.2.16",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5"
