--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
         "@astrojs/sitemap": "^3.1.4",
         "@astrojs/svelte": "^5.4.0",
         "@astrojs/tailwind": "^5.1.0",
+        "@node-rs/argon2": "^1.8.3",
         "@types/canvas-confetti": "^1.6.4",
         "astro": "^4.8.4",
         "astro-expressive-code": "^0.35.3",
         "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.11",
+        "lucia": "^3.2.0",
+        "lucia-adapter-astrodb": "^0.0.8",
         "sharp": "^0.33.3",
         "svelte": "^4.2.17",
         "tailwindcss": "^3.4.3",
