--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "astro dev",
         "build": "astro check && astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "test": "vitest"
     },
     "dependencies": {
         "@astrojs/check": "^0.7.0",
@@ -29,7 +30,8 @@
         "sharp": "^0.33.4",
         "svelte": "^4.2.17",
         "tailwindcss": "^3.4.3",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "vitest": "^1.6.0"
     },
     "devDependencies": {
         "@shikijs/transformers": "^1.6.0",
