--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
         "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.11",
         "lucia": "^3.2.0",
-        "lucia-adapter-astrodb": "^0.0.8",
+        "lucia-adapter-astrodb": "^0.0.9",
         "sharp": "^0.33.4",
-        "svelte": "^4.2.17",
-        "tailwindcss": "^3.4.3",
+        "svelte": "^4.2.18",
+        "tailwindcss": "^3.4.4",
         "typescript": "^5.4.5",
-        "vitest": "^1.6.0"
+        "uuid": "^10.0.0",
+        "vitest": "^1.6.0",
+        "water.css": "^2.1.1"
     },
     "devDependencies": {
-        "@shikijs/transformers": "^1.6.0",
+        "@shikijs/transformers": "^1.6.4",
         "@tailwindcss/typography": "^0.5.13"
     }
 }
