--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "astro-expressive-code": "^0.35.3",
         "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.11",
+        "dompurify": "^3.1.5",
+        "jsdom": "^24.1.0",
         "lucia": "^3.2.0",
         "lucia-adapter-astrodb": "^0.0.9",
         "sharp": "^0.33.4",
@@ -37,6 +39,8 @@
     },
     "devDependencies": {
         "@shikijs/transformers": "^1.6.4",
-        "@tailwindcss/typography": "^0.5.13"
+        "@tailwindcss/typography": "^0.5.13",
+        "@types/dompurify": "^3.0.5",
+        "@types/uuid": "^9.0.8"
     }
 }
