--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@shikijs/transformers": "^1.6.4",
         "@tailwindcss/typography": "^0.5.13",
         "@types/dompurify": "^3.0.5",
+        "@types/jsdom": "^21.1.7",
         "@types/uuid": "^9.0.8"
     }
 }
