--- a/package.json
+++ b/package.json
@@ -13,36 +13,36 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
-        "@astrojs/db": "^0.14.6",
-        "@astrojs/mdx": "^4.0.7",
-        "@astrojs/netlify": "^6.1.0",
-        "@astrojs/rss": "^4.0.11",
-        "@astrojs/sitemap": "^3.2.1",
-        "@astrojs/svelte": "^7.0.4",
-        "@astrojs/tailwind": "^5.1.5",
+        "@astrojs/db": "^0.18.0",
+        "@astrojs/mdx": "^4.3.7",
+        "@astrojs/netlify": "^6.5.12",
+        "@astrojs/rss": "^4.0.12",
+        "@astrojs/sitemap": "^3.6.0",
+        "@astrojs/svelte": "^7.2.0",
         "@node-rs/argon2": "^2.0.2",
+        "@tailwindcss/vite": "^4.1.14",
         "@types/canvas-confetti": "^1.9.0",
-        "astro": "^5.1.8",
-        "astro-expressive-code": "^0.40.1",
+        "astro": "^5.14.4",
+        "astro-expressive-code": "^0.41.3",
         "canvas-confetti": "^1.9.3",
-        "dayjs": "^1.11.13",
-        "dompurify": "^3.2.3",
-        "jsdom": "^26.0.0",
+        "dayjs": "^1.11.18",
+        "dompurify": "^3.3.0",
+        "jsdom": "^27.0.0",
         "lucia": "^3.2.2",
         "lucia-adapter-astrodb": "^0.2.0",
-        "sharp": "^0.33.5",
-        "svelte": "^5.19.0",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.7.3",
-        "uuid": "^11.0.5",
-        "vitest": "^3.0.2",
+        "sharp": "^0.34.4",
+        "svelte": "^5.39.12",
+        "tailwindcss": "^4.1.14",
+        "typescript": "^5.9.3",
+        "uuid": "^13.0.0",
+        "vitest": "^3.2.4",
         "water.css": "^2.1.1"
     },
     "devDependencies": {
-        "@shikijs/transformers": "^2.0.3",
-        "@tailwindcss/typography": "^0.5.16",
-        "@types/dompurify": "^3.0.5",
-        "@types/jsdom": "^21.1.7",
-        "@types/uuid": "^10.0.0"
+        "@shikijs/transformers": "^3.13.0",
+        "@tailwindcss/typography": "^0.5.19",
+        "@types/dompurify": "^3.2.0",
+        "@types/jsdom": "^27.0.0",
+        "@types/uuid": "^11.0.0"
     }
 }
