--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@tailwindcss/vite": "^4.1.14",
         "@types/canvas-confetti": "^1.9.0",
         "astro": "^5.14.4",
+        "astro-embed": "^0.9.1",
         "astro-expressive-code": "^0.41.3",
         "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.18",
