--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
         "noIndex": "astro build --remote && echo 'User-agent: *\nDisallow: /' > dist/robots.txt",
         "preview": "astro preview",
         "astro": "astro",
-        "test": "vitest"
+        "test": "vitest",
+        "open-graph": "node ./src/scripts/open-graph.js"
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
         "@astrojs/db": "^0.18.0",
         "@astrojs/mdx": "^4.3.7",
-        "@astrojs/netlify": "^6.5.12",
+        "@astrojs/netlify": "^6.5.13",
         "@astrojs/rss": "^4.0.12",
         "@astrojs/sitemap": "^3.6.0",
         "@astrojs/svelte": "^7.2.0",
         "@node-rs/argon2": "^2.0.2",
         "@tailwindcss/vite": "^4.1.14",
         "@types/canvas-confetti": "^1.9.0",
-        "astro": "^5.14.4",
+        "astro": "^5.14.6",
         "astro-embed": "^0.9.1",
         "astro-expressive-code": "^0.41.3",
         "canvas-confetti": "^1.9.3",
         "dayjs": "^1.11.18",
         "dompurify": "^3.3.0",
-        "jsdom": "^27.0.0",
+        "jsdom": "^27.0.1",
         "lucia": "^3.2.2",
         "lucia-adapter-astrodb": "^0.2.0",
         "sharp": "^0.34.4",
-        "svelte": "^5.39.12",
+        "svelte": "^5.41.0",
         "tailwindcss": "^4.1.14",
         "typescript": "^5.9.3",
         "uuid": "^13.0.0",
@@ -44,6 +45,7 @@
         "@tailwindcss/typography": "^0.5.19",
         "@types/dompurify": "^3.2.0",
         "@types/jsdom": "^27.0.0",
-        "@types/uuid": "^11.0.0"
+        "@types/uuid": "^11.0.0",
+        "puppeteer": "^24.25.0"
     }
 }
