--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "preview": "astro preview",
         "astro": "astro",
         "test": "vitest",
-        "open-graph": "node ./src/scripts/open-graph.js"
+        "open-graph": "node ./src/scripts/open-graph.js",
+        "format": "prettier --write ."
     },
     "dependencies": {
         "@astrojs/check": "^0.9.6",
@@ -42,6 +43,7 @@
         "@shikijs/transformers": "^3.21.0",
         "@tailwindcss/typography": "^0.5.19",
         "@types/uuid": "^11.0.0",
+        "prettier": "^3.8.0",
         "puppeteer": "^24.35.0"
     }
 }
